Update with more security adding XSRF-Token, ratelimiter in the login, adding token table, updating swagger
